content/docs/v2024.4.27/guides/README.md
---
title: Guides | KubeDB
menu:
  docs_v2024.4.27:
    identifier: guides-readme
    name: Readme
    parent: guides
    weight: -1
menu_name: docs_v2024.4.27
section_menu_id: guides
url: /docs/v2024.4.27/guides/
aliases:
- /docs/v2024.4.27/guides/README/
info:
  autoscaler: v0.30.0
  cli: v0.45.0
  dashboard: v0.21.0
  installer: v2024.4.27
  ops-manager: v0.32.0
  product: kubedb
  provisioner: v0.45.0
  schema-manager: v0.21.0
  ui-server: v0.21.0
  version: v2024.4.27
  webhook-server: v0.21.0
---

# Guides

Guides to show you how to perform tasks with KubeDB:
- [Druid](/docs/v2024.4.27/guides/kafka/README). Shows how to manage Druid using KubeDB.
- [Elasticsearch](/docs/v2024.4.27/guides/elasticsearch/README). Shows how to manage Elasticsearch & OpenSearch using KubeDB.
- [Kafka](/docs/v2024.4.27/guides/kafka/README). Shows how to manage Kafka using KubeDB.
- [FerretDB](/docs/v2024.4.27/guides/ferretdb/README). Shows how to manage FerretDB using KubeDB.
- [MariaDB](/docs/v2024.4.27/guides/mariadb). Shows how to manage MariaDB using KubeDB.
- [Memcached](/docs/v2024.4.27/guides/memcached/README). Shows how to manage Memcached using KubeDB.
- [Microsoft SQL Server](/docs/v2024.4.27/guides/mssqlserver/README). Shows how to manage Microsoft SQL Server using KubeDB.
- [MongoDB](/docs/v2024.4.27/guides/mongodb/README). Shows how to manage MongoDB using KubeDB.
- [MySQL](/docs/v2024.4.27/guides/mysql/README). Shows how to manage MySQL using KubeDB.
- [Percona XtraDB](/docs/v2024.4.27/guides/percona-xtradb/README). Shows how to manage Percona XtraDB using KubeDB.
- [PgBouncer](/docs/v2024.4.27/guides/pgbouncer/README). Shows how to manage PgBouncer using KubeDB.
- [Pgpool](/docs/v2024.4.27/guides/pgpool/README). Shows how to manage Pgpool using KubeDB.
- [PostgreSQL](/docs/v2024.4.27/guides/postgres/README). Shows how to manage PostgreSQL using KubeDB.
- [ProxySQL](/docs/v2024.4.27/guides/proxysql/README). Shows how to manage ProxySQL using KubeDB.
- [RabbitMQ](/docs/v2024.4.27/guides/rabbitmq/README). Shows how to manage RabbitMQ using KubeDB.
- [Redis](/docs/v2024.4.27/guides/redis/README). Shows how to manage Redis using KubeDB.
- [SingleStore](/docs/v2024.4.27/guides/singlestore/README). Shows how to manage SingleStore using KubeDB.
- [Solr](/docs/v2024.4.27/guides/solr/README). Shows how to manage Solr using KubeDB.
- [ZooKeeper](/docs/v2024.4.27/guides/zookeeper/README). Shows how to manage ZooKeeper using KubeDB.
