content/docs/v2025.8.31/guides/README.md
---
title: Guides | KubeDB
menu:
  docs_v2025.8.31:
    identifier: guides-readme
    name: Readme
    parent: guides
    weight: -1
menu_name: docs_v2025.8.31
section_menu_id: guides
url: /docs/v2025.8.31/guides/
aliases:
- /docs/v2025.8.31/guides/README/
info:
  autoscaler: v0.43.0
  cli: v0.58.0
  dashboard: v0.34.0
  installer: v2025.8.31
  ops-manager: v0.45.0
  product: kubedb
  provisioner: v0.58.0
  schema-manager: v0.34.0
  ui-server: v0.34.0
  version: v2025.8.31
  webhook-server: v0.34.0
---

# Guides

Guides to show you how to perform tasks with KubeDB:
- [Cassandra](/docs/v2025.8.31/guides/cassandra/README). Shows how to manage Cassandra using KubeDB.
- [ClickHouse](/docs/v2025.8.31/guides/clickhouse/README). Shows how to manage ClickHouse using KubeDB.
- [Druid](/docs/v2025.8.31/guides/druid/README). Shows how to manage Druid using KubeDB.
- [Elasticsearch](/docs/v2025.8.31/guides/elasticsearch/README). Shows how to manage Elasticsearch & OpenSearch using KubeDB.
- [FerretDB](/docs/v2025.8.31/guides/ferretdb/README). Shows how to manage FerretDB using KubeDB.
- [Hazelcast](/docs/v2025.8.31/guides/hazelcast/README). Shows how to manage Hazelcast using KubeDB.
- [Ignite](/docs/v2025.8.31/guides/ignite/README). Shows how to manage Ignite using KubeDB.
- [Kafka](/docs/v2025.8.31/guides/kafka/README). Shows how to manage Kafka using KubeDB.
- [MariaDB](/docs/v2025.8.31/guides/mariadb). Shows how to manage MariaDB using KubeDB.
- [Memcached](/docs/v2025.8.31/guides/memcached/README). Shows how to manage Memcached using KubeDB.
- [Microsoft SQL Server](/docs/v2025.8.31/guides/mssqlserver/README). Shows how to manage Microsoft SQL Server using KubeDB.
- [MongoDB](/docs/v2025.8.31/guides/mongodb/README). Shows how to manage MongoDB using KubeDB.
- [MySQL](/docs/v2025.8.31/guides/mysql/README). Shows how to manage MySQL using KubeDB.
- [Percona XtraDB](/docs/v2025.8.31/guides/percona-xtradb/README). Shows how to manage Percona XtraDB using KubeDB.
- [PgBouncer](/docs/v2025.8.31/guides/pgbouncer/README). Shows how to manage PgBouncer using KubeDB.
- [Pgpool](/docs/v2025.8.31/guides/pgpool/README). Shows how to manage Pgpool using KubeDB.
- [PostgreSQL](/docs/v2025.8.31/guides/postgres/README). Shows how to manage PostgreSQL using KubeDB.
- [ProxySQL](/docs/v2025.8.31/guides/proxysql/README). Shows how to manage ProxySQL using KubeDB.
- [RabbitMQ](/docs/v2025.8.31/guides/rabbitmq/README). Shows how to manage RabbitMQ using KubeDB.
- [Redis](/docs/v2025.8.31/guides/redis/README). Shows how to manage Redis using KubeDB.
- [SingleStore](/docs/v2025.8.31/guides/singlestore/README). Shows how to manage SingleStore using KubeDB.
- [Solr](/docs/v2025.8.31/guides/solr/README). Shows how to manage Solr using KubeDB.
- [ZooKeeper](/docs/v2025.8.31/guides/zookeeper/README). Shows how to manage ZooKeeper using KubeDB.
